--- a/donate/style.css
+++ b/donate/style.css
@@ -42,7 +42,7 @@
   
   }
   
-  .save, .ready {
+  .save, .ready , .yes{
     background-color: #EEB506;
     padding-left: 15px;
     padding-right: 15px;
@@ -53,7 +53,7 @@
     font-weight: bold;
   }
   
-  .save:hover, .ready:hover {
+  .save:hover, .ready:hover, .yes:hover {
     opacity: 50%;
   }
   
@@ -154,42 +154,20 @@
   
   }
   
-  .footer_2{
-    position: relative;
-    top: 100px;
-    height: 400px;
+  .footer {
     font-family: 'Be Vietnam Pro', sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:flex-start;
+    margin-top: 200px;
+    gap: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     border-top: 1px solid;
-    border-top-color:#EEB506;
+    border-color: #FFA500;
   }
   
-  .footer_2_img{
-    width: 160px;
-    height: 191px;
-    display:;
-    padding-top: 122px;
-  }
-  
-  address{
-    display: inline-block;
-    margin-left: 200px;
-    padding-top: 0px;
-  
-  }
-  
-  .footer_end_div{
-    
-    display:inline-block;
-    margin-left: 500px;
-    
-  
-  }
-  
-  .sign_up_end_footer{
-    font-size: 40px;
-    font-weight: bolder;
-    border-radius: 50px;
-    background-color: #EEB506;
-    text-align: center;
-    
+  .footerlogo {
+    height: 170px;
   }
